[package]
name = "aquestalk-proxy"
version = "0.1.0"
authors = ["Na-x4 <Na-x4@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libloading = "0.7"
encoding_rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.13"
derive-getters = "0.2.0"
threadpool = "1.8"
getopts = "0.2.21"
