[package]
name = "aquestalk-proxy"
version = "0.1.0"
edition = "2021"
authors = ["Na-x4 <Na-x4@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13"
encoding_rs = "0.8"
libloading = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
